--- a/app/src/main/res/layout/activity_tela_questionario.xml
+++ b/app/src/main/res/layout/activity_tela_questionario.xml
@@ -31,16 +31,20 @@
         android:id="@+id/responseC"
         android:layout_width="349dp"
         android:layout_height="53dp"
+        android:layout_marginTop="3dp"
         android:layout_marginBottom="220dp"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/responseB"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/responseB"
         android:layout_width="349dp"
         android:layout_height="53dp"
+        android:layout_marginTop="2dp"
         android:layout_marginBottom="236dp"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
