--- a/app/src/main/res/layout/activity_tela_fim_de_jogo.xml
+++ b/app/src/main/res/layout/activity_tela_fim_de_jogo.xml
@@ -4,7 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TelaFimDeJogo">
+    tools:context=".TelaFimDeJogo"
+    android:background="@color/deep_sky_blue">
 
+    <TextView
+        android:id="@+id/textResult"
+        android:layout_width="356dp"
+        android:layout_height="90dp"
+        android:text=""
+        android:textColor="@color/black"
+        android:textAlignment="center"
+        android:textSize="50dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.472"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.06" />
+
+    <TextView
+        android:id="@+id/textCorrets"
+        android:textColor="@color/black"
+        android:textAlignment="center"
+        android:layout_width="385dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="48dp"
+        android:text="Acertos:"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textResult" />
+
+    <TextView
+        android:id="@+id/textErrors"
+        android:textColor="@color/black"
+        android:textAlignment="center"
+        android:layout_width="385dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="16dp"
+        android:text="Erros:"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textCorrets"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/playAgain"
+        android:layout_width="187dp"
+        android:layout_height="61dp"
+        android:text="Jogar Novamente"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textErrors"
+        app:layout_constraintVertical_bias="0.349" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
